--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@ layout: default
 </nav>
 
 <section id='content'>
-{% for post in site.posts reversed %}
-  <article class='{{ post.type }}'>
-    <a name='{{ post.url }}' href='#{{ post.url }}'><h2>{% if post.type %}<code><b>{{ post.type }}</b> {{ post.url_path }}</code> {% endif %}{{ post.title }}</h2></a>
-    <section class='body'>
-      {{ post.content }}
-    </section>
-  </article>
-{% endfor %}
+	<div class="articles-wrapper">
+		{% for post in site.posts reversed %}
+		  <article class='{{ post.type }}'>
+		    <a name='{{ post.url }}' href='#{{ post.url }}'><h2>{% if post.type %}<code><b>{{ post.type }}</b> {{ post.url_path }}</code> {% endif %}{{ post.title }}</h2></a>
+		    <section class='body'>
+		      {{ post.content }}
+		    </section>
+		  </article>
+		{% endfor %}
+	</div>
 </section>
